--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 body{
     background-color:bisque;
+    
+}
+#username{/*style for input name field*/
+    font-size:larger;
+    font-weight:bold;
+    color:blue;
+    background-color:whitesmoke;
+}
+h1.heading{
+    color:rgb(211, 98, 17);
 }
